[package]
name = "phargs-cli"
eversion.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords = ["cli"]
readme = "../../README.md"

[dependencies]
argh = "0.1.12"
log = "0.4.21"
phargs = { path = "../phargs" }

[profile.release]
strip = true
lto = true
opt-level = 'z'
codegen-units = 1
